# regrip

./: .gitignore  AUTHORS  CMakeLists.txt  FindFAAC.cmake  Makefile.am  Makefile.in  README  README.md  TODO  TODO.md  aclocal.m4  config.h.in  configure  configure.in  grip.spec.in  regrip.desktop
cmake/: FindCDParanoia.cmake  FindCURL.cmake  FindFAAC.cmake  FindLAME.cmake  GSettings.cmake
contrib/: Makefile.in
doc/: CMakeLists.txt  Makefile.in
doc/C/: CMakeLists.txt  Makefile.am  Makefile.in  grip.xml
encoders/: CMakeLists.txt
encoders/faac/: CMakeLists.txt  enc_faac.c
encoders/lame/: CMakeLists.txt  enc_lame.c
encoders/opus/: CMakeLists.txt  enc_opus.c
encoders/sndfile/: CMakeLists.txt  enc_sndfile.c
gschema/: CMakeLists.txt  net.sukkology.software.regrip.encoder.faac.gschema.xml  net.sukkology.software.regrip.encoder.opus.gschema.xml  net.sukkology.software.regrip.encoders.faac.gschema.xml  net.sukkology.software.regrip.encoders.opus.gschema.xml  net.sukkology.software.regrip.gschema.xml
pixmaps/: CMakeLists.txt  Makefile.in
po/: grip-2.2.pot
src/: CMakeLists.txt  Makefile.am  Makefile.in  cddev.c  cddev.h  cdpar.c  cdpar.h  cdplay.c  cdplay.h  circbuf.c  circbuf.h  codectest.c  common.h  dialog.c  dialog.h  discdb.c  discdb.h  discedit.c  discedit.h  eggtrayicon.c  encoder.c  encoder.h  encoder_faac.c  encoder_faac.h  encoder_opus.c  encoder_opus.h  encoder_sndfile.c  encoder_sndfile.h  gain_analysis.c  gain_analysis.h  grip.c  grip.h  grip_id3.h  gripcfg.c  gripcfg.h  id3.c  launch.c  launch.h  main.c  parsecfg.c  (+12 more)
ui/: regrip.ui
