### INSTALLATION STUFF ###

install (
	FILES
        grip.xml
        cdconfig.png
        cdplayer.png
        cdplayersmall.png
        cdscan.png
        discdb.png
        discdbconfig.png
        editing.png
        eject.png
        encprog.png
        ffwd.png
        grip-logo.png
        id3config.png
        minmax.png
        miscconfig.png
        modeinterface.png
        mp3config.png
        mp3config2.png
        multiartist.png
        nexttrk.png
        playloop.png
        playnormal.png
        playonce.png
        playpause.png
        playplaylist.png
        playrandom.png
        prevtrk.png
        progtrack.png
        proxyconfig.png
        quit.png
        rewind.png
        ripconfig.png
        ripconfig2.png
        ripconfig3.png
        ripping.png
        ripprog.png
        ripsmall.png
        smile1.png
        smile2.png
        smile3.png
        smile4.png
        smile5.png
        smile6.png
        smile7.png
        smile8.png
        stop.png
        trkedit.png
        volume.png

	DESTINATION ${HELPDIR}
)
